--- a/.github/workflows/github-actions-htmlextra-report.yml
+++ b/.github/workflows/github-actions-htmlextra-report.yml
@@ -12,7 +12,7 @@ jobs:
       
    # INstall Node on the runner
       - name: Install Node
-        uses: actions/setup-node@v2
+        uses: actions/checkout@v2
         with: 
           node-version: '20.x'
 
